fixes bug where between open filters on mobile then resizing up to desktop

--- a/opentech/static_src/src/sass/apply/components/_button.scss
+++ b/opentech/static_src/src/sass/apply/components/_button.scss
@@ -13,6 +13,7 @@
             width: 100%;
             height: 100%;
             text-align: center;
+            height: 45px;
         }
     }
 
