--- a/opentech/static_src/src/sass/apply/components/_filters.scss
+++ b/opentech/static_src/src/sass/apply/components/_filters.scss
@@ -28,7 +28,7 @@
             bottom: auto;
             height: auto;
             background: transparent;
-            max-height: 200px;
+            max-height: 85px;
         }
     }
 
